syntax = "proto3";

import "Proto/ClientSecrets.proto";
import "Proto/MilestoneActionIntelligence.proto";

option csharp_namespace = "YouRatta.Common.Proto";

package conflict_monitor_message;

message ActionIntelligence
{
    MilestoneActionIntelligence milestones = 1;
    ClientSecrets client_secrets = 2;
}
