syntax = "proto3";

import "Proto/InstalledClientSecrets.proto";

option csharp_namespace = "YouRatta.Common.Proto";

package conflict_monitor_message;

message ClientSecrets
{
    oneof client_secrets
    {
        InstalledClientSecrets Installed_Client_Secrets = 1 [ json_name = "installed" ];
    }
}
