syntax = "proto3";

option csharp_namespace = "YouRatta.Common.Proto";

package conflict_monitor_message;

message MilestoneActionIntelligence
{
    enum MilestoneCondition
    {
        MILESTONE_PENDING = 0;
        MILESTONE_BLOCKED = 1;
        MILESTONE_RUNNING = 2;
        MILESTONE_FAILED = 3;
        MILESTONE_COMPLETED = 4;
    }
    message InitialSetupActionIntelligence
    {
        MilestoneCondition Condition = 1;
        int32 Process_Id = 2;
    }
    message GetVideoActionIntelligence
    {
        MilestoneCondition Condition = 1;
        string Access_Token = 2;
    }
    reserved 1;
    optional InitialSetupActionIntelligence Initial_Setup = 2;
    optional GetVideoActionIntelligence Get_Video = 3;
}
